# lean

./: .gitignore  LICENSE  Makefile  README.md  rust-toolchain.toml
ansible/: README.md  (+2 more)
lean_client/: Cargo.toml  Dockerfile  ENVIRONMENT_SELECTION.md  Makefile  config.yaml
lean_client/chain/: Cargo.toml
lean_client/chain/src/: config.rs  lib.rs
lean_client/containers/: Cargo.toml
lean_client/containers/src/: attestation.rs  block.rs  checkpoint.rs  config.rs  lib.rs  public_key.rs  serde_helpers.rs  signature.rs  signature_wrapper.rs  slot.rs  state.rs  status.rs  types.rs  validator.rs  vote.rs
lean_client/containers/src/test_vectors/: mod.rs
lean_client/containers/tests/: Test_CheatSheet.md  debug_deserialize.rs  integration.rs  main.rs  state_justifications.rs
lean_client/containers/tests/integration_tests/: mod.rs  runner.rs  test_invalid_proposer.rs  test_sequential_blocks.rs  test_single_block_with_slot_gap.rs  test_single_empty_block.rs
lean_client/containers/tests/test_vectors/: block_processing.rs  genesis.rs  mod.rs  runner.rs  verify_signatures.rs
lean_client/containers/tests/unit_tests/: attestation_aggregation.rs  common.rs  mod.rs  state_basic.rs  state_justifications.rs  state_process.rs  state_transition.rs
lean_client/env-config/: Cargo.toml
lean_client/fork_choice/: Cargo.toml  README.md
lean_client/fork_choice/src/: extensions.rs  handlers.rs  helpers.rs  lib.rs  store.rs
lean_client/fork_choice/tests/: basic_algorithm_tests.rs  fork_choice_test_vectors.rs  fork_scenario_tests.rs  lmd_ghost.rs  store_integration.rs  store_integration_tests.rs  test_fork_choice_algorithm.rs  unit_tests.rs
lean_client/fork_choice/tests/common/: mod.rs
lean_client/fork_choice/tests/unit_tests/: common.rs  fork_choice.rs  time.rs  validator.rs  votes.rs
lean_client/lean_tests/: Cargo.toml  Makefile
lean_client/lean_tests/src/: utils.rs
lean_client/lean_tests/src/macros/: operations.rs  ssz_static.rs
lean_client/lean_tests/tests/: tests.rs
lean_client/metrics/: Cargo.toml  README.md
lean_client/metrics/src/: lib.rs  server.rs
lean_client/msm/: common_utils.rs  das.rs  eth.rs  msm.rs  strassen.rs
lean_client/networking/: Cargo.toml
lean_client/networking/src/: bootnodes.rs  compressor.rs  enr_ext.rs  lib.rs  req_resp.rs  serde_utils.rs  types.rs
lean_client/networking/src/discovery/: config.rs  mod.rs  tests.rs
lean_client/networking/src/gossipsub/: config.rs  control.rs  mcache.rs  mesh.rs  message.rs  mod.rs  topic.rs  types.rs
lean_client/networking/src/gossipsub/tests/: config.rs  control.rs  mcache.rs  mesh.rs  message.rs  message_id.rs  mod.rs  raw_message.rs  topic.rs
lean_client/networking/src/network/: behaviour.rs  mod.rs  service.rs
lean_client/networking/src/sync/: backfill_sync.rs  block_cache.rs  config.rs  head_sync.rs  mod.rs  peer_manager.rs  service.rs  states.rs
lean_client/networking/src/sync/tests/: backfill_sync_tests.rs  block_cache_tests.rs  head_sync_tests.rs  mod.rs  peer_manager_tests.rs  service_tests.rs
lean_client/networking/tests/: gossipsub_integration.rs  gossipsub_message.rs  gossipsub_message_id_type.rs  gossipsub_parameters.rs  main.rs
lean_client/src/: main.rs
lean_client/test/straussen_test_crate/: Cargo.toml
lean_client/test/straussen_test_crate/src/: lib.rs
lean_client/tests/test_vectors/test_blocks/: test_block_at_large_slot_number.json  test_block_extends_deep_chain.json  test_block_with_invalid_parent_root.json  test_block_with_invalid_proposer.json  test_block_with_invalid_state_root.json  test_blocks_with_gaps.json  test_empty_blocks.json  test_empty_blocks_with_missed_slots.json  test_linear_chain_multiple_blocks.json  test_process_first_block_after_genesis.json  test_sequential_blocks.json  test_single_block_with_slot_gap.json  test_single_empty_block.json
lean_client/tests/test_vectors/test_fork_choice/test_attestation_processing/: test_attestation_accumulation_full_validator_set.json  test_attestation_superseding_same_validator.json  test_attestations_move_to_known_between_blocks.json  test_extended_chain_attestation_superseding_pattern.json  test_proposer_attestation_appears_in_latest_new.json  test_slot_gaps_with_attestation_superseding.json
lean_client/tests/test_vectors/test_fork_choice/test_attestation_target_selection/: test_attestation_target_advances_with_attestations.json  test_attestation_target_at_genesis_initially.json  test_attestation_target_justifiable_constraint.json  test_attestation_target_with_extended_chain.json  test_attestation_target_with_slot_gaps.json
lean_client/tests/test_vectors/test_fork_choice/test_fork_choice_head/: test_head_advances_through_deep_chain.json  test_head_switches_to_heavier_fork.json  test_head_with_deep_fork_split.json  test_head_with_gaps_in_slots.json  test_head_with_large_gaps.json  test_head_with_two_competing_forks.json
lean_client/tests/test_vectors/test_fork_choice/test_fork_choice_reorgs/: test_back_and_forth_reorg_oscillation.json  test_reorg_on_newly_justified_slot.json  test_reorg_prevention_heavy_fork_resists_light_competition.json  test_reorg_with_slot_gaps.json  test_simple_one_block_reorg.json  test_three_block_deep_reorg.json  test_three_way_fork_competition.json  test_two_block_reorg_progressive_building.json
lean_client/tests/test_vectors/test_fork_choice/test_lexicographic_tiebreaker/: test_equal_weight_forks_use_lexicographic_tiebreaker.json
lean_client/tests/test_vectors/test_fork_choise/test_attestation_processing/: test_attestation_accumulation_full_validator_set.json  test_attestation_superseding_same_validator.json  test_attestations_move_to_known_between_blocks.json  test_extended_chain_attestation_superseding_pattern.json  (+2 more)
lean_client/tests/test_vectors/test_genesis/: test_genesis_custom_time.json  test_genesis_custom_validator_set.json  test_genesis_default_configuration.json
lean_client/tests/test_vectors/test_invalid/: test_invalid_proposer.json
lean_client/validator/: Cargo.toml
lean_client/validator/src/: keys.rs  lib.rs
lean_client/validator/tests/: unit_tests.rs
(+101 files in other folders)
