[workspace]
members = ["chain", "containers", "env-config", "fork_choice", "networking", "validator"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["TODO"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
chain = { path = "./chain" }
containers = { path = "./containers" }
fork_choice = { path = "./fork_choice" }
networking = { path = "./networking" }
validator = { path = "./validator" }
libp2p = { version = "0.56.0", default-features = false, features = [
    'dns',
    'gossipsub',
    'identify',
    'macros',
    'noise',
    'quic',
    'request-response',
    'tcp',
    'tokio',
    'yamux'
] }
alloy-consensus = "1.0.38"
alloy-primitives = "1.4.0"
anyhow = "1.0"
paste = "1.0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
snap = "1.1"
ssz = { git = "https://github.com/grandinetech/grandine", package = "ssz", branch = "develop" }
ssz-derive = { git = "https://github.com/grandinetech/grandine", package = "ssz_derive", branch = "develop" }
ssz-types = "0.3.0"
tokio = { version = "1.0", features = ["full"] }
tree-hash = "0.4.0"
typenum = "1.19"
sha2 = "0.10"

[workspace.dev-dependencies]
rstest = "0.18.2"
pretty_assertions = "1.4.0"
serde_json = "1.0.107"

[package]
name = "lean_client"
version = "0.1.0"
edition = "2021"

[features]
default = ["devnet2", "xmss-signing"]
xmss-signing = ["validator/xmss-signing"]
devnet1 = ["containers/devnet1", "fork-choice/devnet1", "networking/devnet1", "validator/devnet1"]
devnet2 = ["containers/devnet2", "fork-choice/devnet2", "networking/devnet2", "validator/devnet2"]

[dependencies]
chain = { path = "./chain" }
containers = { path = "./containers" }
fork-choice = { path = "./fork_choice" }
networking = { path = "./networking" }
validator = { path = "./validator" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = "0.1.41"
hex = "0.4"
libp2p-identity = { version = "0.2", features = ["secp256k1"] }
