[package]
name = "containers"
version = "0.1.0"
edition = "2021"

[features]
xmss-verify = []
default = []

[lib]
name = "containers"
path = "src/lib.rs"

[dependencies]
env-config = { path = "../env-config", default-features = false }
ssz = { workspace = true }
serde = { workspace = true }
ssz_derive = { workspace = true }
typenum = "1"
serde_json = "1.0"
serde_yaml = "0.9"
hex = "0.4.3"
sha2 = "0.10"
leansig = { git = "https://github.com/leanEthereum/leanSig", branch = "main" }
lean-multisig = { git = "https://github.com/leanEthereum/leanMultisig", branch = "main" }
anyhow = "1.0.100"
alloy-primitives = "1.5.2"

[dev-dependencies]
rstest = "0.18"
pretty_assertions = "1.4"
serde_json = "1.0"
test-generator = { workspace = true }
