[package]
name = "fork-choice"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
env-config = { path = "../env-config", default-features = false }
containers = { path = "../containers", default-features = false }
ssz = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
test-generator = "0.3.1"
