[package]
name = "lean_tests"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
license = "MIT OR Apache-2.0"

[features]
lean_tests = []

[dependencies]
alloy-consensus = "0.1.0"
alloy-primitives = "0.1.0"
anyhow = "1.0"
paste = "1.0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
snap = "1.1"
ssz = { git = "https://github.com/grandinetech/grandine", package = "ssz", branch = "develop" }
ssz-derive = { git = "https://github.com/grandinetech/grandine", package = "ssz_derive", branch = "develop" }
tokio = { version = "1.0", features = ["full"] }
typenum = "1.19"
containers = { path = "../containers" }

[dev-dependencies]
rstest = "0.18.2"
pretty_assertions = "1.4.0"
serde_json = "1.0.107"

[lints.rust]
unsafe_code = "forbid"