[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
prometheus = "0.14"
axum = { version = "0.7" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
hyper = "1.7"

[lib]
name = "metrics"
path = "src/lib.rs"
crate-type = ["rlib"]
