[package]
name = "networking"
version = "0.1.0"
edition = "2024"

[features]
default = []
devnet1 = ["containers/devnet1", "env-config/devnet1"]
devnet2 = ["containers/devnet2", "env-config/devnet1"]

[dependencies]
env-config = { path = "../env-config", default-features = false }
containers = {workspace = true}
alloy-primitives = { workspace = true}
libp2p = {workspace = true}
snap = {workspace = true}
sha2 = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
enr = "0.7"
futures = "0.3"
libp2p-identity = { version = "0.2", features = ["secp256k1"] }
libp2p-mplex = "0.39"
parking_lot = "0.12"
rand = "0.8"
tokio = { workspace = true }
tracing = "0.1"
yamux = "0.12"
ssz = { workspace = true }
serde = { workspace = true }
