[package]
name = "networking"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
env-config = { path = "../env-config", default-features = false }
containers = {workspace = true}
alloy-primitives = { workspace = true}
libp2p = {workspace = true}
snap = {workspace = true}
sha2 = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
discv5 = "0.10.2"
enr = { version = "0.13", features = ["k256"] }
k256 = "0.13"
futures = "0.3"
libp2p-identity = { version = "0.2", features = ["secp256k1"] }
libp2p-mplex = "0.39"
parking_lot = "0.12"
rand = "0.8"
tokio = { workspace = true }
tracing = "0.1"
yamux = "0.12"
ssz = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
hex = "0.4.3"
tiny-keccak = "2.0.2"
derive_more = "2.1.1"

[dev-dependencies]
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
